--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	My IP Address is: 38.122.127.226 <br/><br/> I grew up in New York City <br/><br/>
 	Something no one would expect about me: I've been to the Arctic! <br/><br/>
 	My fav place: <br/><br/></p1>
-	<img src="../../Library/Mobile Documents/com~apple~CloudDocs/highline.jpeg" height="500"/>
+	<img src="highline.jpeg" height="500"/>
 </body>
 </html>
